--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .header {
     background-color: #1F2937;
     display: flex;
-    padding: 20px 100px;
+    padding: 20px 100px 0px;
     align-items: center; 
     justify-content: space-between;
 }
@@ -22,9 +22,45 @@ body {
     color: #F9FAF8;
 }
 
-a {
+a, 
+.heroText {
     font-size: 18px;
     color: #E5E7EB;
+}
+
+a {
     text-decoration: none;
     padding: 0px 0px 0px 20px;
+}
+
+.hero {
+    background-color: #1F2937;
+    padding: 100px;
+    display: flex;
+    gap: 50px;
+
+}
+
+.heroHeadline {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+button {
+    border: none;
+}
+
+.signup {
+    padding: 8px 30px;
+    color: #F9FAF8;
+    background-color: #3882F6;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+img {
+    height: 200px;
+    width: 600px;
+    background-color: gray;
 }
