--- a/style.css
+++ b/style.css
@@ -65,3 +65,18 @@ img {
     background-color: gray;
     flex-shrink: 0;
 }
+
+.headline {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    text-align: center;
+    padding: 40px;
+}
+
+.placeholder {
+    height: 150px;
+    width: 150px;
+    border: 5px solid blue;
+    border-radius: 10px;
+}
