--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap'); 
 
 * {
     margin: 0;
@@ -66,6 +67,10 @@ img {
     flex-shrink: 0;
 }
 
+.top {
+    height: 400px;
+}
+
 .headline {
     font-size: 36px;
     font-weight: 900;
@@ -94,6 +99,30 @@ img {
 
 .itemText {
     text-align: center; 
-    padding: 10px 0px;
+    padding-top: 10px;
     color: #1F2937;
+}
+
+.middle {
+    background-color: #E5E7EB;
+    height: 400px;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    padding: 0px 200px;
+    gap: 30px;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: 100;
+    color: #1F2937;
+    text-align: center;
+}
+
+.author {
+    font-size: 25px;
+    font-weight: 800;
+    align-self: flex-end;
 }
