--- a/style.css
+++ b/style.css
@@ -126,3 +126,35 @@ img {
     font-weight: 800;
     align-self: flex-end;
 }
+
+.bottom {
+    padding: 100px 150px;
+}
+
+.card {
+    background-color:#3882F6;
+    padding: 50px 100px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cardHeadline {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: 600;
+}
+
+.cardText {
+    color: #E5E7EB;
+}
+
+.bottomSignup {
+    box-sizing: border-box;
+    padding: 8px 30px;
+    color: #F9FAF8;
+    background-color: #3882F6;
+    border-radius: 10px;
+    border: 3px solid #F9FAF8;
+}
