--- a/style.css
+++ b/style.css
@@ -158,3 +158,15 @@ img {
     border-radius: 10px;
     border: 3px solid #F9FAF8;
 }
+
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    padding: 30px;
+    align-items: center; 
+    justify-content: center;
+}
+
+.copyright {
+    color: #E5E7EB;
+}
